[package]
name = "Shoehorn-Server"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = "0.3.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.5.4"
sqlite = "0.23.9"
bcrypt = "0.2.0"

card_deck = "*"

